Fixed "fixed" wallpaper on home/shop on mobile also fixed weddingwallpaper type error

--- a/Site/css/shop.css
+++ b/Site/css/shop.css
@@ -92,22 +92,17 @@
     width: 100%;
     animation: transitionIn calc(var(--transitionLength) * 2);
     animation-timing-function: linear;
-    margin-top: var(--navContainerHeight);
-    margin-bottom: var(--navContainerHeight);
     min-height: 100vh;
 }
 
 /* Wallpaper */
 
 #wallpaperShop {
-    background-image: url(../img/wallpapers/wallpaperShop.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
+    position: fixed;
     height: 100%;
     width: 100%;
-    position: fixed;
+    background: url(../img/wallpapers/wallpaperShop.jpg) center center no-repeat;
+    background-size: cover;
 }
 
 /* Shopping */
@@ -116,6 +111,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, calc(var(--imageContainerSize) + 2 * var(--shopDisplayMargin)));
     justify-content: center;
+    margin-top: var(--navContainerHeight);
+    margin-bottom: var(--navContainerHeight);
     margin-left: var(--sideWrapperMargin);
     margin-right: var(--sideWrapperMargin);
 }
